# bass-cpp

./: .gitignore  CMakeLists.txt  basscppConfig.cmake  main.cpp  test.cpp  testInstall.ps1  utils.cmake
bass/: CMakeLists.txt
include/bass/: Bass.hpp  Channel.hpp  Plugin.hpp  Sample.hpp  Stream.hpp  types.hpp  utils.hpp
src/bass/: Bass.cpp  Channel.cpp  Plugin.cpp  Sample.cpp  Stream.cpp  bass.cpp  utils.cpp
test/: CMakeLists.txt
